added github link to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,9 +6,10 @@
       </div>
       <div class="grid_4">
         <div>
-          My Social: &nbsp 
+          My Web Presence: &nbsp 
           <a href="http://www.linkedin.com/pub/jesse-brizzi/80/50a/779" target="_blank" ><img src="images/linkedin-icon.png" alt="linkedin link"></a>
-          <a href="http://instagram.com/j3553b" target="_blank" ><img src="images/instagram-icon32.png" alt="instagram link"></a>
+          <a href="http://instagram.com/j3553b" target="_blank" ><img src="images/instagram-icon.png" alt="instagram link"></a>
+          <a href="https://www.github.com/jessebrizzi" target="_blank" ><img src="images/github-icon.png" alt="github link"></a>
         </div>
       </div>
       <div class="grid_12">July 4th, 2015</div>
