--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
           <a href="https://www.github.com/jessebrizzi" target="_blank" ><img src="images/github-icon.png" alt="github link"></a>
         </div>
       </div>
-      <div class="grid_12">July 4th, 2015</div>
+      <div class="grid_12">December, 2015</div>
     </div>
   </div>
 </footer>
