fix image path resolution bugs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     {% seo %}
   </head>
   <body>
-    <main class="measure-wide center ph3 pt5 pb6">
+    <main class="measure-wide-l center ph3 pt5 pb6">
       {% if is_home %}
       <h1 class="mt0 mb4">
       {% else %}
@@ -106,19 +106,11 @@
                 </h3>
               </li>
             {% endfor %}
-            <li class="pt4 mt0 mb4">
-              <h2 class="ma0">
-                <a
-                href="{{ "/" | relative_url }}"
-                class="no-underline bg-{{ site.brand_color }}">
-                  {{site.title}}
-                </a>
-              </h2>
-            </li>
           {% endif %}
           </ul>
         </section>
       {% endif %}
+      <hr />
       <p>Page last updated: November 2017</p>
     </main>
     <script>
