--- a/_static/app.css
+++ b/_static/app.css
@@ -13,14 +13,18 @@ html[lang="ja"] {
   line-height: 1.9;
 }
 
-body { 
-	background:rgb(0, 0, 0); 
+body {
+	background:rgb(0, 0, 0);
 	font-family: 'Lato', sans-serif;
-	font-size:16px; 
+	font-size:16px;
 	line-height:1.375em;
 	color:#ffffff;
 	min-width:1000px;
 	background: url('../images/body-bg.gif') top center repeat;
+}
+
+.measure-wider {
+    max-width: 50em;
 }
 
 .logo {
