--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% feed_meta %}
-    <link rel="stylesheet" href="{{ "/static/app.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/app.css" | relative_url }}">
     <link rel="shortcut icon" href="{{ "/favicon.ico" | relative_url }}" />
     {% seo %}
   </head>
@@ -111,7 +111,7 @@
         </section>
       {% endif %}
       <hr />
-      <p>Page last updated: November 2017</p>
+      <p>Page last updated: December 2017</p>
     </main>
     <script>
       var moreLink = document.querySelector('.js-more')
