--- a/style.css
+++ b/style.css
@@ -43,10 +43,11 @@ main {
 }
 
 .logo {
-    width: 150px;
+    width: 300px;
     height: auto;
     margin-bottom: 2rem;
     border-radius: 50%;
+    image-rendering: optimizeQuality;
 }
 
 h1 {
@@ -111,8 +112,7 @@ h1 {
 }
 
 .resume-button {
-    /* display: inline-block; */
-    display: none;
+    display: inline-block;
     padding: 0.8rem 2rem;
     background-color: var(--accent);
     color: var(--text);
